@@ -41,13 +41,23 @@
             
             <size>135,-1d</size>
           </object>
+          <object class="wxStaticText" name="stOwner">
+            <label>Owner</label>
+            <pos>5,37d</pos>
+          </object>
+          <object class="ctlComboBox" name="cbOwner">
+            <content/>
+            <pos>70,35d</pos>
+            <size>135,12d</size>
+            <style>wxCB_DROPDOWN</style>
+          </object>
           <object class="wxStaticText" name="stTrusted">
             
             
             <label>Trusted</label>
             
             
-            <pos>5,37d</pos>
+            <pos>5,52d</pos>
           </object>
           <object class="wxCheckBox" name="chkTrusted">
             
@@ -58,7 +68,7 @@
             <checked>1</checked>
             
             
-            <pos>70,35d</pos>
+            <pos>70,50d</pos>
             
             
             <size>13,12d</size>
@@ -69,31 +79,9 @@
             <label>Handler</label>
             
             
-            <pos>5,52d</pos>
-          </object>
-          <object class="wxComboBox" name="cbHandler">
-            
-            
-            <content/>
-            
-            
-            <pos>70,50d</pos>
-            
-            
-            <size>135,12d</size>
-            
-            
-            <style>wxCB_READONLY|wxCB_DROPDOWN</style>
-          </object>
-          <object class="wxStaticText" name="stValidator">
-            
-            
-            <label>Validator</label>
-            
-            
             <pos>5,67d</pos>
           </object>
-          <object class="wxComboBox" name="cbValidator">
+          <object class="wxComboBox" name="cbHandler">
             
             
             <content/>
@@ -107,18 +95,40 @@
             
             <style>wxCB_READONLY|wxCB_DROPDOWN</style>
           </object>
+          <object class="wxStaticText" name="stValidator">
+            
+            
+            <label>Validator</label>
+            
+            
+            <pos>5,82d</pos>
+          </object>
+          <object class="wxComboBox" name="cbValidator">
+            
+            
+            <content/>
+            
+            
+            <pos>70,80d</pos>
+            
+            
+            <size>135,12d</size>
+            
+            
+            <style>wxCB_READONLY|wxCB_DROPDOWN</style>
+          </object>
           <object class="wxStaticText" name="stComment">
             
             
             <label>Comment</label>
             
             
-            <pos>5,82d</pos>
+            <pos>5,97d</pos>
           </object>
           <object class="wxTextCtrl" name="txtComment">
             
             
-            <pos>70,80d</pos>
+            <pos>70,95d</pos>
             
             
             <size>135,100d</size>
@@ -127,13 +137,13 @@
             
             <label>Use replication</label>
             
-            <pos>5,185d</pos>
+            <pos>5,200d</pos>
           </object>
           <object class="wxComboBox" name="cbClusterSet">
             
             <content/>
             
-            <pos>70,183d</pos>
+            <pos>70,198d</pos>
             
             <size>135,12d</size>
             
@@ -145,7 +155,7 @@
         <selected>1</selected>
       </object>
       <pos>2,2d</pos>
-      <size>214,215d</size>
+      <size>214,230d</size>
     </object>
     <object class="wxButton" name="wxID_HELP">
       
@@ -153,7 +163,7 @@
       <label>&amp;Help</label>
       
       
-      <pos>2,220d</pos>
+      <pos>2,235d</pos>
     </object>
     <object class="wxButton" name="wxID_OK">
       
@@ -164,7 +174,7 @@
       <default>1</default>
       
       
-      <pos>113,220d</pos>
+      <pos>113,235d</pos>
     </object>
     <object class="wxButton" name="wxID_CANCEL">
       
@@ -172,7 +182,7 @@
       <label>&amp;Cancel</label>
       
       
-      <pos>166,220d</pos>
+      <pos>166,235d</pos>
     </object>
     <size>218,238d</size>
     <style></style>
