@@ -36,6 +36,7 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2007-12-03 GL  1.9.0  Add an option to alter a function's owner
 2007-11-30 DP  1.8.1  Don't offer package names and system schemas as schemas 
                       when creating public synonyms.
 2007-11-28 DP  1.8.1  Fix pgAgent's job query when a host agent is specified
@@ -56,7 +57,7 @@ Date       Dev Ver    Change details
                       option, even if connected to EnterpriseDB. 
 2007-11-27 DP  1.8.1  Fix EnterpriseDB public synonym loading so that they
                       aren't considered system objects.
-2007-11-23 DP  1.9.0  Add an option to enable/disable rules on tables [Gullaume
+2007-11-23 DP  1.9.0  Add an option to enable/disable rules on tables [Guillaume
                       Lelarge]
 2007-11-23 DP  1.9.0  Add options to TRUNCATE and TRUNCATE...CASCADE tables.
                       [Guillaume Lelarge]
